# GuessingGame

./: Cargo.toml
src/: main.rs  models.rs  routes.rs  utils.rs
static/: game.js  start.js  styles.css
templates/: game.html.hbs  index.html.hbs
