[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0-alpha.1"
time = "0.3.36"
serde = { version = "1.0.202", features = ["derive"] }
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
tokio = { version = "1.37.0", features = ["full"] }
